--- a/index.html
+++ b/index.html
@@ -8,20 +8,17 @@
 
 <body>
     <div class="all">
-        <table align="center">
-            <tr>
-                <td rowspan="3"><img src="Photo.jpg" height="100px"></td>
-                <td>
-                    <h2>Shyam Diwakar Korade</h2>
-                </td>
-            </tr>
-            <tr>
-                <td><b>Mobile No:</b><a href="tel:9657961608">9657961608</a></td>
-            </tr>
-            <tr>
-                <td><b>Email id:</b><a href="mailto:Shyamkorade0@gmail.com">Shyamkorade0@gmail.com</a> </td>
-            </tr>
-        </table><br>
+        <div class="profile">
+            <div class="part-1">
+                <img src="Photo.jpg" height="100px">
+            </div>
+            <div class="part-2">
+                <h2>Shyam Diwakar Korade</h2>
+                <b>Mobile No : </b><a style="color: black; text-decoration: none; font-weight: bold;" href="tel:9657961608">9657961608</a> <br>
+                <b>Email id : </b><a style="color: black; text-decoration: none; font-weight: bold;" href="mailto:Shyamkorade0@gmail.com">Shyamkorade0@gmail.com</a>
+            </div>
+        </div>
+
         <div class="add"><b>Address:</b></div><br>
         <div align="center">
             Lakshmi nagar, Sulezari, Nagbhid,
@@ -69,9 +66,7 @@
         <div class="skill">
             <div class="tech"><b>Technical Skills:</b></div>
             <ul>
-                <li>Web Development(HTML,CSS)</li>
-                <li>Diploma in MS-CIT</li>
-                <li>English Typing (30/40)</li>
+                <li>Web Development</li>
                 <li>Tata Motors 6 month Experience as Technician</li>
             </ul>
         </div><br>
